[package]
name = "tetcore-deps"
version = "0.2.0"
authors = ["Steve Degosserie <steve@parity.io>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tetcoin/tetcore-deps"
repository = "https://github.com/tetcoin/tetcore-deps"
documentation = "https://github.com/tetcoin/tetcore-deps/blob/master/README.md"
description = """
Tetcore-deps, a command line tool for managing Tetcore runtime pallet dependencies.
"""

[dependencies]
clap = "2.33"
cargo-deps = "1.4.1"
cargo-edit = "0.5.0"
dirs = "2.0"
env_logger = "0.7"
hex = "0.4"
Inflector = "0.11"
log = "0.4"
toml = "0.5"
toml_edit = "0.1"
url = "2.1"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
